Fixed Dark Mode colors

--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -3,6 +3,7 @@
     --primary-color: #343a40;
     --secondary-color: #828486;
     --background-color: #f5f5f5;
+    --experiences-color: #18191b;
     --text-color:#343a40;
 }
 
@@ -157,7 +158,7 @@ color: var(--background-color);
 }
 
 .experiences{
-    background-color: var(--primary-color) ;
+    background-color: var(--experiences-color) ;
     padding: 1rem;
     box-shadow: 0 -10px 25px rgb(0 0 0 / 24%);
 }
@@ -167,7 +168,7 @@ display: flex;
 justify-content:center;
 }
 .experiences .head .title {
-    color: var(--background-color);
+    color: #f5f5f5;
 }
 
 
@@ -249,7 +250,7 @@ color: var(--background-color);
 .quote{
     display: block;
     text-align: center;
-    color: var(--background-color);
+    color: #f5f5f5;
     padding: 3rem;
     
 }
